--- a/index.html
+++ b/index.html
@@ -81,14 +81,20 @@
             
             <div class="main__banner__img"></div>
 
+            <div class="main__why">
+                <div class="c-container main__why__container">
+                    <p class="main__why__about">
+
+                    </p>
+                </div>
+            </div>
+
             <div class="main__content">
                 <div id="main-what-is-battery" class="main__content__batteries"> 
 
 
                     <div class="main__batteries__about">
                         <div id="main-what-is-battery" class="c-container-small">
-                        
-
 
                              <h2 data-aos="fade-down">Was ist eine Batterie?</h2>
 
